--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "expo": "~54.0.13",
     "expo-av": "~16.0.7",
+    "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
