--- a/app.json
+++ b/app.json
@@ -39,6 +39,13 @@
             "backgroundColor": "#000000"
           }
         }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "La aplicación necesita acceso a tus fotos para actualizar tu avatar",
+          "cameraPermission": "La aplicación necesita acceso a tu cámara para tomar fotos"
+        }
       ]
     ],
     "experiments": {
