--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "clsx": "^2.1.1",
     "expo": "~54.0.13",
     "expo-av": "~16.0.7",
+    "expo-barcode-scanner": "^13.0.1",
+    "expo-camera": "~17.0.8",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.9",
